--- a/source/app/components/wi-inventory/wi-inventory.html
+++ b/source/app/components/wi-inventory/wi-inventory.html
@@ -4,7 +4,7 @@
         flex-direction: column;
         padding:0;
         flex-basis: calc(32% - 30px);
-        border: 1px solid #ccc;
+        border: 1px solid #888;
         border-radius: 5px;
         overflow: hidden;
         margin: 10px;
