--- a/source/app/components/wi-inventory/wi-inventory.less
+++ b/source/app/components/wi-inventory/wi-inventory.less
@@ -2,6 +2,7 @@ wi-inventory {
     display:flex;
     flex-direction: column;
     background: #f4f4f4;
+    margin: 5px;
     .inventory-main {
         flex: 1;
         /*height: calc(~"100% - 41px");*/
