--- a/source/app/components/wii-explorer/wii-explorer.less
+++ b/source/app/components/wii-explorer/wii-explorer.less
@@ -19,5 +19,8 @@ wii-explorer{
     .panel-heading button.btn {
         margin-left: 5px;
     }
+    .panel-default {
+        border-color: #888;
+    }
 }
 
