--- a/source/app/components/wii-items/wii-items.less
+++ b/source/app/components/wii-items/wii-items.less
@@ -24,6 +24,7 @@ wii-items {
         display: flex;
         flex-direction: column;
         margin-bottom: 0px;
+        border-color: #888;
     }
     .panel-body {
         padding: 0;
