--- a/source/app/components/wii-properties/wii-properties.less
+++ b/source/app/components/wii-properties/wii-properties.less
@@ -12,6 +12,7 @@ wii-properties {
         flex-direction: column;
         margin-bottom: 0px;
         overflow: hidden;
+        border-color: #888;
     }
     .panel-body {
         padding: 0;
