Update interactive selection, save selections successfully

--- a/source/app/components/wi-histogram/template/wi-histogram.html
+++ b/source/app/components/wi-histogram/template/wi-histogram.html
@@ -17,7 +17,7 @@
                 name='{{wiHistogram.wiD3AreaName}}'
                 wi-histogram-ctrl='wiHistogram'
                 container-name="{{wiHistogram.containerName}}"
-                selection-masks='$parent.selectionMasks'></wi-d3-histogram>
+                vi-selections='$parent.viSelections'></wi-d3-histogram>
             <!--<wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
                 name='{{wiHistogram.wiD3AreaName}}'
                 id-histogram='wiHistogram.id'></wi-d3-histogram>-->
