--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -23,7 +23,7 @@
         <wi-d3 style="width: 100%; flex: 1; display: flex;flex-direction:column;"
                name='{{wiLogplot.wiD3AreaName}}'
                container-name='{{wiLogplot.containerName}}'
-               selection-masks='$parent.selectionMasks'
+               vi-selections='$parent.viSelections'
                wi-logplot-ctrl='wiLogplot'>
         </wi-d3>
     </div>
