--- a/source/less/simpleLayout.less
+++ b/source/less/simpleLayout.less
@@ -27,3 +27,25 @@ div.panel-default, div.panel-default>div.panel-heading {
     width: 97%;
     font-style: italic;
 }
+
+// NeuralNetwork style sheet
+
+.neural-network-main {
+    // full width and height container
+    display: flex;
+    flex-direction: column;
+    & > div {
+        display: flex;
+        flex: 1;
+        flex-direction: row;
+    }
+    .neural-network-plot-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    text[class*='-layer-label'] {
+        font-size: 25;
+        font-weight: bold;
+    }
+}
