--- a/source/components/wi-item-dropdown/wi-item-dropdown.less
+++ b/source/components/wi-item-dropdown/wi-item-dropdown.less
@@ -1,4 +1,20 @@
+/*
 wi-item-dropdown {
     display: inline-block;
     vertical-align: middle;
+}
+*/
+.height24px span.btn.btn-default, .height24px input[type=search] {
+    line-height: 20px;
+    height: 24px;
+}
+.height34px span.btn.btn-default, .height34px input[type=search] {
+    line-height: 28px;
+    height: 34px;
+}
+.position-fixed .ui-select-bootstrap > .ui-select-choices, 
+.position-fixed .ui-select-bootstrap > .ui-select-no-choice {
+    position:fixed;
+    top:auto;
+    left:auto;
 }
