--- a/source/components/wi-item-dropdown/wi-item-dropdown.less
+++ b/source/components/wi-item-dropdown/wi-item-dropdown.less
@@ -18,3 +18,7 @@ wi-item-dropdown {
     top:auto;
     left:auto;
 }
+.col-sm-9 .ui-select-bootstrap > .ui-select-choices, 
+.col-sm-9 .ui-select-bootstrap > .ui-select-no-choice {
+    width: 69%;
+}
