--- a/source/app/components/wi-workflow-player/wi-workflow-player.html
+++ b/source/app/components/wi-workflow-player/wi-workflow-player.html
@@ -96,11 +96,6 @@
             background-color: #aaa;
         }
 
-        wi-workflow-player .wizard-control {
-            position: absolute;
-            top: 16px;
-        }
-
         @keyframes blink-animation {
             from {
                 opacity: 0;
@@ -183,7 +178,6 @@
             border: 1px solid #888;
         }
     </style>
-    <!-- <div class="form-group"> -->
     <wizard indicators-position="top" on-finish="wiWorkflowPlayer.finishWizard()">
         <wz-step wz-title="Configure Inputs">
             <div style='display:flex; flex-direction:column;flex:1;'>
@@ -250,10 +244,52 @@
                         </div>
                     </div>
                 </div>
-                <button ng-disabled="!wiWorkflowPlayer.validate();" wz-next class='btn btn-default wizard-control' style='right:10px;'>
-                    <span>Next</span>
-                    <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
-                </button>
+                <div style="padding:0 10px;">
+                    <button ng-disabled="!wiWorkflowPlayer.validate();" wz-next class='btn btn-default' style='float: right;'>
+                        <span>Next</span>
+                        <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
+                    </button>
+                </div>
+            </div>
+        </wz-step>
+        <wz-step wz-title="Configure Outputs">
+            <div style="display:flex;flex:1;overflow:hidden;flex-direction:column;">
+                <div style="display:flex;flex:1;flex-direction:column;padding:10px;overflow:auto;">
+                    <div ng-repeat='wf in wiWorkflowPlayer.workflowConfig.steps' ng-hide='wf.disabled' class='bordered panel panel-default' style='display:table;min-width:100%;'>
+                        <div class='panel-heading' style='background-color:#eee;'>
+                            <span class='control-button' ng-class="{'fa fa-chevron-up':  wf.expanded, 'fa fa-chevron-down': !wf.expanded}" ng-click='wf.expanded = !wf.expanded'
+                                style='margin-right:5px;'>
+                            </span>
+                            <span style='font-weight:700;'>{{wf.name}}</span>
+                        </div>
+                        <div ng-show="wf.expanded" class='panel-body' style="border-top: 1px solid #eee;overflow:visible;">
+                            <ul ng-if='wf.outputs.length' class='table-row table-head'>
+                                <li style="width:20px;">#</li>
+                                <li style="width:200px;">Name</li>
+                                <li style="width:200px;">Family</li>
+                            </ul>
+                            <ul class='table-row' ng-repeat="item in wf.outputs track by $index">
+                                <li style="width:20px">{{$index + 1}}</li>
+                                <li style='height:auto;overflow:visible;padding:0;width:200px;'>
+                                    <div>
+                                        <input style='width:100%;' type="text" ng-model="item.name" class='form-control wi-form-control'>
+                                    </div>
+                                </li>
+                                <li title='{{item.family}}' style="width:200px;">{{item.family}}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding:0 10px;">
+                    <button wz-previous class='btn btn-default' style='float: left;'>
+                        <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
+                        <span>Back</span>
+                    </button>
+                    <button wz-next class='btn btn-default' style='float: right;'>
+                        <span>Next</span>
+                        <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
+                    </button>
+                </div>
             </div>
         </wz-step>
         <wz-step wz-title='Select Inputs'>
@@ -345,16 +381,17 @@
                         </div>
                     </div>
                 </div>
-                <button wz-previous class=' btn btn-default wizard-control' style='left:10px;'>
-                    <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
-                    <span>Back</span>
-                </button>
-                <button wz-next class='btn btn-default wizard-control' style='right:10px;'>
-                    <span>Finish</span>
-                    <i class='ok-16x16' style='vertical-align:text-bottom;'></i>
-                </button>
+                <div style="padding:0 10px;">
+                    <button wz-previous class=' btn btn-default' style='float: left;'>
+                        <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
+                        <span>Back</span>
+                    </button>
+                    <button wz-next class='btn btn-default' style='float: right;'>
+                        <span>Run All</span>
+                        <i class='run-16x16' style='vertical-align:text-bottom;'></i>
+                    </button>
+                </div>
             </div>
         </wz-step>
     </wizard>
-    <!-- </div> -->
 </div>
