--- a/source/app/components/wi-workflow-player/wi-workflow-player.html
+++ b/source/app/components/wi-workflow-player/wi-workflow-player.html
@@ -177,6 +177,10 @@
             border-radius: 50%;
             border: 1px solid #888;
         }
+        wi-workflow-player .wizard-control{
+            padding: 0 10px;
+            text-align: right;
+        }
     </style>
     <wizard indicators-position="top" on-finish="wiWorkflowPlayer.finishWizard()">
         <wz-step wz-title="Configure Inputs">
@@ -244,8 +248,8 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding:0 10px;">
-                    <button ng-disabled="!wiWorkflowPlayer.validate();" wz-next class='btn btn-default' style='float: right;'>
+                <div class='wizard-control'>
+                    <button ng-disabled="!wiWorkflowPlayer.validate();" wz-next class='btn btn-default'>
                         <span>Next</span>
                         <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
                     </button>
@@ -280,12 +284,12 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding:0 10px;">
-                    <button wz-previous class='btn btn-default' style='float: left;'>
+                <div class='wizard-control'>
+                    <button wz-previous class='btn btn-default'>
                         <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
                         <span>Back</span>
                     </button>
-                    <button wz-next class='btn btn-default' style='float: right;'>
+                    <button wz-next class='btn btn-default'>
                         <span>Next</span>
                         <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
                     </button>
@@ -381,12 +385,12 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding:0 10px;">
-                    <button wz-previous class=' btn btn-default' style='float: left;'>
+                <div class='wizard-control'>
+                    <button wz-previous class=' btn btn-default'>
                         <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
                         <span>Back</span>
                     </button>
-                    <button wz-next class='btn btn-default' style='float: right;'>
+                    <button wz-next class='btn btn-default'>
                         <span>Run All</span>
                         <i class='run-16x16' style='vertical-align:text-bottom;'></i>
                     </button>
