--- a/source/app/components/wi-workflow/wi-workflow.less
+++ b/source/app/components/wi-workflow/wi-workflow.less
@@ -41,5 +41,9 @@ wi-workflow{
             margin-left: 10px;
             top: 50%;
         }
+        .output-content{
+            list-style: none;
+            padding-left: 0;
+        }
     }
 }
