--- a/source/app/components/wi-workflow-player/wi-workflow-player.html
+++ b/source/app/components/wi-workflow-player/wi-workflow-player.html
@@ -1,7 +1,6 @@
 <div>
     <style>
         wi-workflow-player>div {
-            /* height: calc(100% - 10px); */
             flex: 1;
             display: flex;
             background-color: #f7f7f7;
@@ -258,7 +257,7 @@
         </wz-step>
         <wz-step wz-title="Configure Outputs">
             <div style="display:flex;flex:1;overflow:hidden;flex-direction:column;">
-                <div style="display:flex;flex:1;flex-direction:column;padding:10px;overflow:auto;">
+                <div style="display:flex;flex:1;flex-direction:column;padding:0 10px;overflow:auto;margin-bottom:10px;">
                     <div ng-repeat='wf in wiWorkflowPlayer.workflowConfig.steps' ng-hide='wf.disabled' class='bordered panel panel-default' style='display:table;min-width:100%;'>
                         <div class='panel-heading' style='background-color:#eee;'>
                             <span class='control-button' ng-class="{'fa fa-chevron-up':  wf.expanded, 'fa fa-chevron-down': !wf.expanded}" ng-click='wf.expanded = !wf.expanded'
@@ -323,7 +322,7 @@
                             </wi-base-treeview>
                         </wi-scroll>
                     </div>
-                    <div style="flex:2;display:flex;flex-direction:column; margin-left:5px;padding:0 5px;overflow:hidden;">
+                    <div style="width:{{wiWorkflowPlayer.rightWidth()}}px;display:flex;flex-direction:column; margin-left:5px;padding:0 5px;overflow:hidden;">
                         <div class='wi-droppable' wi-element-ready="wiWorkflowPlayer.droppableSetting();" ng-style="{height:wiWorkflowPlayer.wiDroppableHeight}">
                             <div style='position:absolute; top:0;left:0; z-index:1;'>
                                 <span style="padding: 0.5em; border-radius:6px; background-color:#ccc;box-shadow: 1px 1px 2px #888;display:inline-block; margin:3px;"
@@ -398,5 +397,4 @@
             </div>
         </wz-step>
     </wizard>
-    <!-- </div> -->
 </div>
