--- a/source/app/components/wi-workflow/wi-workflow.html
+++ b/source/app/components/wi-workflow/wi-workflow.html
@@ -10,16 +10,16 @@
 </div>
 <div class="workflow-main-content">
     <wi-workflow-player name='{{wiWorkflow.WorkflowPlayerName}}' id-project='wiWorkflow.getCurrentProjectId()' id-workflow="wiWorkflow.id"></wi-workflow-player>
-    <ul resizable r-directions="['top']" r-flex="true" class="output-pane" ng-show='wiWorkflow.showOutput'>
+    <!--<ul resizable r-directions="['top']" r-flex="true" class="output-pane" ng-show='true'>
         <h5 class="output-header">
             <label>Ouputs</label>
         </h5>
-        <ul class="output-content">
+        <ul>
             <li ng-repeat="resultPlot in wiWorkflow.wfOutputData">
                 <button class="btn btn-default" ng-click='wiWorkflow.openPlot(resultPlot)'>
                     {{resultPlot.plotName}}
                 </button>
             </li>
         </ul>
-    </div>
+    </ul>-->
 </div>
