--- a/source/app/components/wi-workflow/wi-workflow.less
+++ b/source/app/components/wi-workflow/wi-workflow.less
@@ -16,7 +16,7 @@ wi-workflow{
         wi-workflow-player{
             flex:1;
             display: flex;
-            margin-bottom: 14px;
+            //margin-bottom: 14px;
         }
 
         .output-pane{
