--- a/source/app/components/wi-workflow-player/wi-workflow-player.html
+++ b/source/app/components/wi-workflow-player/wi-workflow-player.html
@@ -1,189 +1,206 @@
-<div>
-    <style>
-        wi-workflow-player>div {
-            flex: 1;
-            display: flex;
-            background-color: #f7f7f7;
-        }
+<style>
+    wi-workflow-player>div {
+        flex: 1;
+        display: flex;
+        background-color: #f7f7f7;
+    }
 
-        wi-workflow-player .bordered {
-            border: 1px solid #aaa;
-            border-radius: 4px;
-            border-color: #aaa;
-        }
+    wi-workflow-player .bordered {
+        border: 1px solid #aaa;
+        border-radius: 4px;
+        border-color: #aaa;
+    }
 
-        wi-workflow-player #tplTree .wi-treeview-container {
-            padding-left: 0;
-        }
+    wi-workflow-player #tplTree .wi-treeview-container {
+        padding-left: 0;
+    }
 
-        wi-workflow-player .inventory-side {
-            display: flex;
-            flex-direction: column;
-            padding: 0;
-            flex: 1;
-            overflow: hidden;
-            background-color: #ffffff;
-            margin-bottom: 0;
-        }
+    wi-workflow-player .inventory-side {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        flex: 1;
+        overflow: hidden;
+        background-color: #ffffff;
+        margin-bottom: 0;
+    }
 
-        wi-workflow-player .inventory-side .panel-heading {
-            padding-top: 0;
-            padding-bottom: 0;
-        }
+    wi-workflow-player .inventory-side .panel-heading {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 
-        wi-workflow-player .height24px span.btn.btn-default {
-            line-height: 20px;
-            height: 24px;
-        }
+    wi-workflow-player .height24px span.btn.btn-default {
+        line-height: 20px;
+        height: 24px;
+    }
 
-        wi-workflow-player .ui-select-bootstrap>ul.ui-select-choices li,
-        wi-workflow-player .ui-select-bootstrap>ul.ui-select-no-choice li {
-            display: block;
-            width: 100%;
-        }
+    wi-workflow-player .ui-select-bootstrap>ul.ui-select-choices li,
+    wi-workflow-player .ui-select-bootstrap>ul.ui-select-no-choice li {
+        display: block;
+        width: 100%;
+    }
 
-        wi-workflow-player .ui-select-bootstrap>.ui-select-choices,
-        wi-workflow-player .ui-select-bootstrap>.ui-select-no-choice {
-            width: auto;
-        }
+    wi-workflow-player .ui-select-bootstrap>.ui-select-choices,
+    wi-workflow-player .ui-select-bootstrap>.ui-select-no-choice {
+        width: auto;
+    }
 
-        wi-workflow-player .ui-select-match-text {
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+    wi-workflow-player .ui-select-match-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 
-        #testElement .wi-parent-id,
-        #testElement .icon-expanded {
-            display: none;
-        }
+    #testElement .wi-parent-id,
+    #testElement .icon-expanded {
+        display: none;
+    }
 
-        wi-workflow-player .disabled-color {
-            opacity: 0.2;
-        }
+    wi-workflow-player .disabled-color {
+        opacity: 0.2;
+    }
 
-        /* wizard styles */
+    /* wizard styles */
 
-        wi-workflow-player>div>div {
-            display: flex;
-            flex: 1;
-        }
+    wi-workflow-player>div>div {
+        display: flex;
+        flex: 1;
+    }
 
-        wi-workflow-player div[indicators-position],
-        wi-workflow-player div.steps,
-        wi-workflow-player section {
-            display: flex;
-            flex: 1;
-        }
+    wi-workflow-player div[indicators-position],
+    wi-workflow-player div.steps,
+    wi-workflow-player section {
+        display: flex;
+        flex: 1;
+    }
 
-        wi-workflow-player div[indicators-position] {
-            flex-direction: column;
-            position: relative;
-        }
+    wi-workflow-player div[indicators-position] {
+        flex-direction: column;
+        position: relative;
+    }
 
-        wi-workflow-player div[indicators-position]>h2 {
-            text-align: center;
-            font-size: 2em;
-            margin-top: 6px;
-        }
+    wi-workflow-player div[indicators-position]>h2 {
+        text-align: center;
+        font-size: 2em;
+        margin-top: 6px;
+    }
 
-        wi-workflow-player ul.steps-indicator {
-            height: 60px;
-        }
+    wi-workflow-player ul.steps-indicator {
+        height: 60px;
+    }
 
-        wi-workflow-player .steps-indicator li a:before,
-        .steps-indicator:before {
-            background-color: #aaa;
-        }
+    wi-workflow-player .steps-indicator li a:before,
+    .steps-indicator:before {
+        background-color: #aaa;
+    }
 
-        @keyframes blink-animation {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+    @keyframes blink-animation {
+        from {
+            opacity: 0;
         }
+        to {
+            opacity: 1;
+        }
+    }
 
-        wi-workflow-player .steps-indicator li.current a:before {
-            background-color: blue;
-            animation: blink-animation 2s steps(5, start) infinite;
-            -webkit-animation: blink-animation 1s steps(5, start) infinite;
-        }
+    wi-workflow-player .steps-indicator li.current a:before {
+        background-color: blue;
+        animation: blink-animation 2s steps(5, start) infinite;
+        -webkit-animation: blink-animation 1s steps(5, start) infinite;
+    }
 
-        /* end wizard styles */
+    /* end wizard styles */
 
-        wi-workflow-player .wi-droppable {
-            border: 4px dashed #ccc;
-            border-radius: 4px;
-            min-height: 5em;
-            position: relative;
-            padding: 1em;
-            margin-bottom: 20px;
-        }
+    wi-workflow-player .wi-droppable {
+        border: 4px dashed #ccc;
+        border-radius: 4px;
+        min-height: 5em;
+        position: relative;
+        padding: 1em;
+        margin-bottom: 20px;
+    }
 
-        wi-workflow-player .wi-droppable::after {
-            content: "DROP DATASETS HERE";
-            color: #ccc;
-            font-size: 3em;
-            width: 100%;
-            display: inline-block;
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
-        }
+    wi-workflow-player .wi-droppable::after {
+        content: "DROP DATASETS HERE";
+        color: #ccc;
+        font-size: 3em;
+        width: 100%;
+        display: inline-block;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
 
-        wi-workflow-player ul.table-row {
-            list-style: none;
-            padding-left: 0;
-            white-space: nowrap;
-            display: table-row;
-        }
+    wi-workflow-player ul.table-row {
+        list-style: none;
+        padding-left: 0;
+        white-space: nowrap;
+        display: table-row;
+    }
 
-        wi-workflow-player ul.table-head {
-            font-weight: 700;
-            background-color: #ddd;
-        }
+    wi-workflow-player ul.table-head {
+        font-weight: 700;
+        background-color: #ddd;
+    }
 
-        wi-workflow-player ul.table-row.table-head li {
-            border-left-color: white;
-        }
+    wi-workflow-player ul.table-row.table-head li {
+        border-left-color: white;
+    }
 
-        wi-workflow-player ul.table-row>li {
-            padding: 0 0.5em;
-            display: inline-block;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            border: 1px solid #ddd;
-            border-right-color: transparent;
-            vertical-align: middle;
-            height: 28px;
-            line-height: 28px;
-            width: 120px;
-        }
+    wi-workflow-player ul.table-row>li {
+        padding: 0 0.5em;
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        border: 1px solid #ddd;
+        border-right-color: transparent;
+        vertical-align: middle;
+        height: 28px;
+        line-height: 28px;
+        width: 120px;
+    }
 
-        wi-workflow-player .control-button {
-            float: left;
-            cursor: pointer;
-            line-height: 1.5em;
-        }
+    wi-workflow-player .control-button {
+        float: left;
+        cursor: pointer;
+        line-height: 1.5em;
+    }
 
-        wi-workflow-player .block-button {
-            padding-left: 6px;
-            padding-right: 6px;
-            background: white;
-            border-radius: 50%;
-            border: 1px solid #888;
-        }
-        wi-workflow-player .wizard-control{
-            padding: 0 10px;
-            text-align: right;
-        }
-    </style>
+    wi-workflow-player .block-button {
+        padding-left: 6px;
+        padding-right: 6px;
+        background: white;
+        border-radius: 50%;
+        border: 1px solid #888;
+    }
+    wi-workflow-player .wizard-control{
+        padding: 0 10px;
+        text-align: right;
+        position:absolute;
+        top: -5em;
+        left:0;
+        right:0;
+    }
+    wi-workflow-player .wizard-step-container {
+        display:flex; 
+        flex-direction:column;
+        flex:1;
+        position:relative;
+    }
+</style>
+<div style='display:flex;flex-direction:column'>
+    <div style='flex:1;'>
     <wizard indicators-position="top" on-finish="wiWorkflowPlayer.finishWizard()">
         <wz-step wz-title="Configure Inputs">
-            <div style='display:flex; flex-direction:column;flex:1;'>
+            <div class='wizard-step-container'>
+                <div class='wizard-control'>
+                    <button ng-disabled="!wiWorkflowPlayer.validate();" wz-next class='btn btn-default'>
+                        <span>Next</span>
+                        <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
+                    </button>
+                </div>
                 <div style='padding:10px;display:flex;flex-direction:row;flex:1;'>
                     <div style='flex:1;display:flex;flex-direction:column;margin-bottom:0;' class='bordered panel panel-default'>
                         <div class='panel-heading' style='padding:5px;'>
@@ -191,12 +208,10 @@
                             <label class="btn btn-default" style='float:right; margin-right: 5px;' ng-click="wiWorkflowPlayer.onSelectionTypeChanged(wiWorkflowPlayer.FAMILY_GROUP_SELECTION)"
                                 ng-class='{active: wiWorkflowPlayer.selectionType==wiWorkflowPlayer.FAMILY_GROUP_SELECTION}'
                                 title="Main Family">
-                                <!-- <input type="radio" name="filterBy" class="display-none" value='{{wiWorkflowPlayer.FAMILY_GROUP_SELECTION}}' ng-model="wiWorkflowPlayer.selectionType"> -->
                                 <span class='zone-table-16x16'></span>
                             </label>
                             <label class="btn btn-default" style='float:right; margin-right: 5px;' ng-click="wiWorkflowPlayer.onSelectionTypeChanged(wiWorkflowPlayer.FAMILY_SELECTION)"
                                 ng-class='{active: wiWorkflowPlayer.selectionType==wiWorkflowPlayer.FAMILY_SELECTION}' title="Family">
-                                <!-- <input type="radio" name="filterBy" class="display-none" value='{{wiWorkflowPlayer.FAMILY_SELECTION}}' ng-model="wiWorkflowPlayer.selectionType"> -->
                                 <span class='user-define-16x16'></span>
                             </label>
                             <label class="btn btn-default" style='float:right; margin-right: 5px;' ng-click="wiWorkflowPlayer.onSelectionTypeChanged(wiWorkflowPlayer.CURVE_SELECTION)"
@@ -247,16 +262,10 @@
                         </div>
                     </div>
                 </div>
-                <div class='wizard-control'>
-                    <button ng-disabled="!wiWorkflowPlayer.validate();" wz-next class='btn btn-default'>
-                        <span>Next</span>
-                        <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
-                    </button>
-                </div>
             </div>
         </wz-step>
         <wz-step wz-title="Configure Outputs">
-            <div style="display:flex;flex:1;overflow:hidden;flex-direction:column;">
+            <div class='wizard-step-container'>
                 <div style="display:flex;flex:1;flex-direction:column;padding:0 10px;overflow:auto;margin-bottom:10px;">
                     <div ng-repeat='wf in wiWorkflowPlayer.workflowConfig.steps' ng-hide='wf.disabled' class='bordered panel panel-default' style='display:table;min-width:100%;'>
                         <div class='panel-heading' style='background-color:#eee;'>
@@ -284,11 +293,11 @@
                     </div>
                 </div>
                 <div class='wizard-control'>
-                    <button wz-previous class='btn btn-default'>
+                    <button wz-previous class='btn btn-default' style="float:left;">
                         <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
                         <span>Back</span>
                     </button>
-                    <button wz-next class='btn btn-default'>
+                    <button wz-next class='btn btn-default' style='float:right;'>
                         <span>Next</span>
                         <i class='arrow-right-16x16' style='vertical-align:text-bottom;'></i>
                     </button>
@@ -296,7 +305,7 @@
             </div>
         </wz-step>
         <wz-step wz-title='Select Inputs'>
-            <div style='display:flex; flex-direction:column;flex:1;'>
+            <div class='wizard-step-container'>
                 <div style="display:flex;flex:1;flex-direction:row;padding:10px;">
                     <div class="bordered panel panel-default inventory-side">
                         <div style='display:flex;' class='panel-heading'>
@@ -339,8 +348,7 @@
                                     </span>
                                     <!--<span class='control-button ti-check' ng-class='{"disabled-color": wf.disabled}' style='margin-right:5px;color:black;'>
                                         </span>-->
-                                    <span style='margin-right:10px;padding-right:2px;' ng-click="wiWorkflowPlayer.runWorkflow(wf)" class='fa fa-play control-button block-button'
-                                        title="test run"></span>
+                                    <span style='margin-right:10px;padding-right:2px;' ng-click="wiWorkflowPlayer.runWorkflow(wf)" class='fa fa-play control-button block-button' title="test run"></span>
                                     <span style='font-weight:700;'>{{wf.name}}</span>
                                 </div>
                                 <div ng-show="wf.expanded" class='panel-body' style="border-top: 1px solid #eee;overflow:visible;">
@@ -385,11 +393,11 @@
                     </div>
                 </div>
                 <div class='wizard-control'>
-                    <button wz-previous class=' btn btn-default'>
+                    <button wz-previous class='btn btn-default' style='float:left;'>
                         <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
                         <span>Back</span>
                     </button>
-                    <button wz-next class='btn btn-default'>
+                    <button wz-next class='btn btn-default' style='float:right;'>
                         <span>Run All</span>
                         <i class='run-16x16' style='vertical-align:text-bottom;'></i>
                     </button>
@@ -397,4 +405,18 @@
             </div>
         </wz-step>
     </wizard>
+    </div>
+    <div style='display: block; flex: none;'>
+        <ul class="output-content">
+            <li ng-repeat="wf in wiWorkflowPlayer.workflowConfig.steps" style="display:inline-block;margin-left:0.5em;">
+                <ul style='list-style:none; padding-left: 5px;'>
+                    <li ng-repeat='plot in wf.outputData' style='display:inline-block;margin-left:0.5em;'>
+                        <button class="btn btn-default" ng-click='wiWorkflowPlayer.openPlot(plot)'>
+                            {{plot.plotName}}
+                        </button>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
