--- a/source/app/components/wi-workflow-player/wi-workflow-player.html
+++ b/source/app/components/wi-workflow-player/wi-workflow-player.html
@@ -407,7 +407,7 @@
     </wizard>
     </div>
     <div style='display: block; flex: none;'>
-        <ul class="output-content">
+        <ul style="padding-left:0px;">
             <li ng-repeat="wf in wiWorkflowPlayer.workflowConfig.steps" style="display:inline-block;margin-left:0.5em;">
                 <ul style='list-style:none; padding-left: 5px;'>
                     <li ng-repeat='plot in wf.outputData' style='display:inline-block;margin-left:0.5em;'>
