--- a/source/app/components/wi-workflow-machine-learning/wi-workflow-machine-learning.html
+++ b/source/app/components/wi-workflow-machine-learning/wi-workflow-machine-learning.html
@@ -269,7 +269,7 @@
         <wz-step wz-title="Configure Inputs Params">
             <div style="display:flex;flex:1;overflow:hidden;flex-direction:column;">
                 <div style="display:flex;flex:1;flex-direction:column;padding:10px;overflow:auto;">
-                    <div ng-repeat='wf in wiWorkflowMachineLearning.workflowConfig.steps track by $index' ng-hide='wf.disabled' class='bordered panel panel-default' style='display:table;min-width:100%;'>
+                    <div ng-repeat='wf in wiWorkflowMachineLearning.workflowConfig.steps track by $index' ng-hide='wiWorkflowMachineLearning.hideConfig(wf)' class='bordered panel panel-default' style='display:table;min-width:100%;'>
                         <div class='panel-heading' style='background-color:#eee;'>
                             <span class='control-button' ng-class="{'fa fa-chevron-up':  wf.expanded, 'fa fa-chevron-down': !wf.expanded}" ng-click='wf.expanded = !wf.expanded'
                                 style='margin-right:5px;'>
@@ -376,6 +376,7 @@
                                     <wi-neural-network style='flex:1;' input-curves="wiWorkflowMachineLearning.inputCurves" output-curves="wiWorkflowMachineLearning.outputCurves" n-layers="wiWorkflowMachineLearning.nLayers" n-nodes="wiWorkflowMachineLearning.nNodes"></wi-neural-network>
                                 </div>
                             </div>
+                            
                             <div ng-if="$index===1" style="display: flex;">
                                 <div style="width: 10%;">Choose a model</div>
                                 <ui-select style="width: 20%;" ng-model="wiWorkflowMachineLearning.modelVerify">
