update Crossplot: loga checkbox & tooltip

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -281,6 +281,10 @@
                 font-size: 10px;
             }
         }
+
+        .vi-crossplot-tooltip {
+            pointer-events: none;
+        }
     }
 
 }
