--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -246,8 +246,16 @@
     height: 20px;
     line-height: 20px;
     background-color: rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
 }
-
+.vi-crossplot-footer-left {
+    flex: 1;
+}
+.vi-crossplot-footer-right {
+    flex: 1;
+    text-align: right;
+}
 .vi-crossplot-container {
     position: relative;
     flex: 1;
