--- a/source/components/wi-context-menu/wi-context-menu.less
+++ b/source/components/wi-context-menu/wi-context-menu.less
@@ -24,7 +24,7 @@ wi-context-menu {
                     padding:0 1em;
                     line-height: 20px;
                     .icon-left{
-                        vertical-align: -webkit-baseline-middle;
+                        // vertical-align: -webkit-baseline-middle;
                         margin-left: 5px;
                     }
                     span {
