--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -157,6 +157,7 @@
         stroke: black;
         stroke-dasharray: 2, 1;
         stroke-width: 1px;
+        pointer-events: none;
     }
 
     .tooltip-rect {
@@ -164,6 +165,7 @@
         stroke-width: 1px;
         fill: rgba(255, 255, 160, 0.9);
         font-size: 10;
+        pointer-events: none;
     }
 
     .tooltip-text {
