update ternary modal

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -571,6 +571,10 @@ input[type=checkbox].input-check {
 .ui-select-search {
 	height: 24px;
 }
+.ui-select-bootstrap > .ui-select-choices, .ui-select-bootstrap > .ui-select-no-choice{
+	padding-left: 20px;
+	color: red;
+}
 #spinner-holder {
 	position: absolute;
 	border: 1px solid pink;
