--- a/source/app/components/wi-workflow-machine-learning/template/data-input.html
+++ b/source/app/components/wi-workflow-machine-learning/template/data-input.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div style="padding:0 10px;">
+    <div class="wizard-control">
         <button wz-previous ng-click="wiWorkflowMachineLearning.getListModel();" class=' btn btn-default' style='float: left;'>
             <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
             <span>Back</span>
