--- a/source/app/components/wi-neural-network/wi-neural-network.html
+++ b/source/app/components/wi-neural-network/wi-neural-network.html
@@ -1,3 +1,3 @@
-<div class="neural-network-main" style="display:flex;flex-direction:row;">
-    <div wi-element-ready="wiNeuralNetwork.onReady()" id="{{wiNeuralNetwork.neuralNetworkPlotAreaId}}"></div>
+<div class="neural-network-main" style="display:flex;flex-direction:row;flex:1;">
+    <div style="flex:1;" wi-element-ready="wiNeuralNetwork.onReady()" id="{{wiNeuralNetwork.neuralNetworkPlotAreaId}}"></div>
 </div>
