--- a/source/app/components/wi-workflow-machine-learning/template/model-params.html
+++ b/source/app/components/wi-workflow-machine-learning/template/model-params.html
@@ -60,7 +60,7 @@
             Neural Network is disabled
         </div>
     </div>
-    <div style="padding:0 10px;">
+    <div class="wizard-control">
         <button wz-previous class='btn btn-default' style='float: left;'>
             <i class='arrow-left-16x16' style='vertical-align:text-bottom;'></i>
             <span>Back</span>
