fix loga on histogram in crossplot

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -571,7 +571,7 @@ input[type=checkbox].input-check {
 .ui-select-search {
 	height: 24px;
 }
-.ui-select-bootstrap > .ui-select-choices, .ui-select-bootstrap > .ui-select-no-choice{
+.ui-select-bootstrap > .ui-select-no-choice{
 	padding-left: 20px;
 	color: red;
 }
