improve current view logplot

--- a/source/components/wi-slidingbar/wi-slidingbar.html
+++ b/source/components/wi-slidingbar/wi-slidingbar.html
@@ -2,4 +2,8 @@
      wi-element-ready="wiSlidingbar.onReady()"></div>
 <div id="sliding-handle{{wiSlidingbar.name}}" class="ui-widget-content sliding-handle">
     <div class="sliding-handle-border"></div>
+    <div class="current-view-container">
+        <div class="current-view-top"></div>
+        <div class="current-view-bottom"></div>
+    </div>
 </div>
