--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -27,6 +27,19 @@ wi-slidingbar {
   .sliding-handle {
     border: 0;
     position: absolute;
+    .current-view-container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 13px;
+      font-weight: bold;
+      color: #000;
+      text-shadow: 1px 1px 2px #fff;
+    }
   }
 
   .sliding-handle-border {
